[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.8
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = shampoo 
description = Streamlined Holography for Assessment of Motility in Python for Otherworldly Organisms
long_description = This is a toolkit for digital holographic microscopy with SHAMU. 
author = Brett Morris
author_email = bmmorris@uw.edu
license = MIT
url = https://github.com/bmorris3/shampoo
edit_on_github = True
github_project = bmorris3/shampoo

[entry_points]
astropy-package-template-example = packagename.example_mod:main
